fix(migration): enforce final reconciliation contracts